tests/valid-gd-scripts/dict_values.gd
var x = {}
var xx = {'x':1}
var xxx = {'x':1,}
var xxxx = {'x':1,'y':2}
var xxxxx = {'x':1,'y':2,}
var y = {
}
var yy = {
	1: 2,
	2: 5,
}
var yyy = {1:2,
		2:3,
}
var yyyy = {
	1:
	2,
	2: 3,
}
var z = {
	q = 5,
	w = 7,
}
var qq = { 1+2: 1 }
# var mixed = { 1 : 2, 2 = 3 }		# illegal
# var mixed = { 1 = 2, 2 : 3 }		# illegal
# var mixed = {x = 2, 'y': 1}		# illegal
# var mixed2 = {'y': 1, x = 2}	# illegal
