tests/invalid-gd-scripts/dict2.gd
var mixed2 = {'y': 1, x = 2}
